# exhibition

./: .gitignore  CMakeLists.txt  colorLog.cpp  main.cpp  readMe  readme.txt
baseSrc/encrypt/: CMakeLists.txt
baseSrc/encrypt/include/: HUKFactor.h  asymmetric.h  cryptographic_generic.h  cryptographic_type.h  encrypt_sign.h  keccak256.h  key_derivation.h  message_digest.h  strings.h  symmetric_cipher.h
baseSrc/encrypt/src/: HUKFactor.c  aes.c  aesni.c  asn1parse.c  asn1write.c  asymmetric.c  bignum.c  ccm.c  cipher.c  cipher_wrap.c  cryptographic_generic.c  ctr_drbg.c  debug.c  ecdh.c  ecdsa.c  ecp.c  ecp_curves.c  entropy.c  entropy_poll.c  error.c  gcm.c  hmac_drbg.c  keccak256.c  key_derivation.c  md.c  md5.c  md_wrap.c  memory_buffer_alloc.c  message_digest.c  oid.c  pk.c  pk_wrap.c  platform.c  platform_util.c  rsa.c  rsa_internal.c  sha1.c  sha256.c  sha512.c  symmetric_cipher.c  (+1 more)
baseSrc/encrypt/temp/: encrypt_sign.c  secp256k1.c
baseSrc/http/: CMakeLists.txt  httplib.h
baseSrc/http/tsl/: CMakeLists.txt  libcrypto.so.1.1  libssl.so.1.1
baseSrc/mqtt/: CMakeLists.txt  mqttClient.cpp  mqttClient.h  mqttMessageHandler.cpp  mqttMessageHandler.h
baseSrc/mqtt/test/: CMakeLists.txt  configPath.h  configPath.h.in  publish.cpp  subscribe.cpp  test.cpp
baseSrc/qlibc/: CMakeLists.txt  FileUtils.cpp  FileUtils.h  LogFile.cpp  LogFile.h  LogStream.cpp  LogStream.h  Logging.cpp  Logging.h  QData.cpp  QData.h  StringUtils.cpp  StringUtils.h
baseSrc/qlibc/jsoncpp/: CMakeLists.txt
baseSrc/qlibc/test/: CMakeLists.txt  logtest.cpp  test.cpp
baseSrc/siteService/: CMakeLists.txt  service_site_manager.cpp  service_site_manager.h
baseSrc/siteService/test/: CMakeLists.txt  publish.json  send.cpp  service_provider_example.cpp  sitePublish.cpp  siteSubscribe.cpp
baseSrc/socket/: CMakeLists.txt  messageHandler.cpp  messageHandler.h  objecPtrtHolder.cpp  objecPtrtHolder.h  objectHolder.cpp  objectHolder.h  sockUtils.cpp  sockUtils.h  socketClient.cpp  socketClient.h  socketServer.cpp  socketServer.h  test.cpp
baseSrc/socket/test/: CMakeLists.txt  test.cpp
baseSrc/spdlog/: CMakeLists.txt
baseSrc/spdlog/bench/: bench.cpp
baseSrc/zbaseTest/http/: CMakeLists.txt  httpRequest.cpp  httpServer.cpp
baseSrc/zbaseTest/mqttTest/: CMakeLists.txt  mqttconfig.json  publish.cpp
baseSrc/zbaseTest/siteServiceTest/: CMakeLists.txt  radar.json  receive.cpp  send.cpp  service_provider_example.cpp  sitePublish.cpp  siteSubscribe.cpp
unit/bleSite/: CMakeLists.txt  controlData.txt  main.cpp  paramConfig.h  parameter.h  serviceRequestHandler.cpp  serviceRequestHandler.h
unit/bleSite/b10light/: B10展厅分组列表.txt  deviceList.json  groupAddress.json  serialConfig.json  snAddress.json  statusList.json
unit/bleSite/b10最新分组/: deviceList.json  statusList.json
unit/bleSite/commonSerial/: CMakeLists.txt  ComManager.cpp  ComManager.h  main.cpp
unit/bleSite/data/: bleCommand.json  bleDeviceType.json  commandData.json  controlData.json  deviceList.json  groupAddress.json  newBleCmdData.json  scanList.json  serialConfig.json  snAddress.json  statusList.json  红星美凯龙-蜀西店.txt  记录.txt
unit/bleSite/doc/: B10灯分组.txt  controlData.txt  readMe.txt  控制格式.md  灯分组.txt
unit/bleSite/downCmd/: CMakeLists.txt  bindDevice.cpp  bindDevice.h  downUtil.cpp  downUtil.h  logicControl.cpp
unit/bleSite/formatTrans/: CMakeLists.txt  JsonCmd2Binary.cpp  JsonCmd2Binary.h  binary2JsonEvent.cpp  binary2JsonEvent.h  binaryStatus2Json.cpp  binaryStatus2Json.h  bleConfig.cpp  bleConfig.h  bleConfigParam.cpp  bleConfigParam.h  controlCmd.cpp  controlCmd.h  convert.cpp  convert.h  deviceTypeExtract.cpp  deviceTypeExtract.h  downBinaryCmd.cpp  downBinaryCmd.h  downBinaryFlowControl.cpp  downBinaryFlowControl.h  downBinaryUtil.cpp  downBinaryUtil.h  downCmd.cpp  downCmd.h  downUtil.cpp  downUtil.h  jsonCmd2Binary.cpp  jsonCmd2Binary.h  lightControlCmd.cpp  lightControlCmd.h  lightUpStatus.cpp  lightUpStatus.h  recvPackageParse.cpp  recvPackageParse.h  statusEvent.cpp  statusEvent.h  upBinaryCmd.cpp  upBinayCmd.h  upEvent.cpp  (+3 more)
unit/bleSite/kernal/: requestHandler.cpp  requestHandler.h
unit/bleSite/log/: CMakeLists.txt  Logging.cpp
unit/bleSite/logic/: CMakeLists.txt  bindDevice.cpp  bindDevice.h  groupAddressMap.cpp  groupAddressMap.h  logicControl.cpp  logicControl.h  scanListmanage.cpp  scanListmanage.h  snAddressMap.cpp  snAddressMap.h
unit/bleSite/serial/: BLETelinkDongle.cpp  BLETelinkDongle.h  BaseSerialPort.cpp  BaseSerialPort.h  CMakeLists.txt  CommonDongle.cpp  CommonDongle.h  PosixSerialPort.cpp  PosixSerialPort.h  Win32SerialPort.cpp  main.cpp  (+5 more)
unit/bleTrans/: CMakeLists.txt  bleConfigParam.cpp  bleConfigParam.h  main.cpp  paramConfig.h  serviceRequestHandler.cpp  serviceRequestHandler.h
unit/config/: CMakeLists.txt  baseFunction.cpp  baseFunction.h  cloudUtil.cpp  cloudUtil.h  config.cpp  configParamUtil.cpp  configParamUtil.h  config_main.cpp  logic.cpp  messageSubscribeHandler.cpp  messageSubscribeHandler.h  mqttPayloadHandle.cpp  mqttPayloadHandle.h  myutil.cpp  myutil.h  param.h  paramconfig.h  readMe.txt  secretUtils.cpp  secretUtils.h  serviceRequestHandler.cpp  serviceRequestHandler.h  subscribeMessageHandler.cpp  subscribeMessageHandler.h  whiteListUtil.cpp  whiteListUtil.h
unit/mdm/: CMakeLists.txt  mdmParam.hpp  mdm_main.cpp
unit/newQuery/: CMakeLists.txt  main.cpp  mdns.c  mm.c  param.h  readMe.txt
unit/nightLight/: CMakeLists.txt  main.cpp  param.h  read.txt  serivce.cpp  service.h  开发.txt
unit/synergy/: CMakeLists.txt  deviceControlHandler.cpp  deviceControlHandler.h  deviceManager.cpp  groupManager.cpp  msgSubscribeHandler.cpp  msgSubscribeHandler.h  param.h  paramConfig.h  readme.txt  sceneCommandHandler.cpp  sceneCommandHandler.h  serviceRequestHandler.cpp  serviceRequestHandler.h  synergy.cpp  synergy_main.cpp  util.cpp  util.h
unit/testSite/: CMakeLists.txt  config.cpp  main.cpp  param.h  paramconfig.h  path.h.in  serviceHandler.cpp  serviceHandler.h  serviceRequestHandler.cpp  serviceRequestHandler.h  testSite.cpp  whiteListParamUtil.cpp  whiteListParamUtil.h  whiteList_test.cpp
(+372 files in other folders)
