add_library(mqttclient STATIC mqttClient.cpp mqttMessageHandler.cpp)
target_include_directories(mqttclient PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)

if(CYGWIN_X86_64)
    target_link_libraries(mqttclient PUBLIC ${CMAKE_SOURCE_DIR}/baseSrc/mqtt/lib/cygwin/libpaho-mqtt3a.a)
elseif(LINUX_X86_64)
    target_link_libraries(mqttclient PRIVATE ${CMAKE_SOURCE_DIR}/baseSrc/mqtt/lib/linux/libpaho-mqtt3a.a)
    target_link_libraries(mqttclient PRIVATE pthread)
elseif(ANDROID_ARM32)
    target_link_libraries(mqttclient PRIVATE ${CMAKE_SOURCE_DIR}/baseSrc/mqtt/lib/android/libpaho-mqtt3a.a)
elseif(LINUX_ARM64)
    target_link_libraries(mqttclient PRIVATE ${CMAKE_SOURCE_DIR}/baseSrc/mqtt/lib/arm64/libpaho-mqtt3a.a)
    target_link_libraries(mqttclient PRIVATE pthread)
endif()

target_link_libraries(mqttclient PRIVATE qlibc)