add_subdirectory(serial)
add_subdirectory(downCmd)
add_subdirectory(sourceManage)
add_subdirectory(upStatus)
add_subdirectory(service)

FILE(GLOB src "*.cpp")
add_executable(ble_site ${src})
target_link_libraries(ble_site PRIVATE qlibc)
target_link_libraries(ble_site PRIVATE siteService)
target_link_libraries(ble_site PRIVATE common)
target_link_libraries(ble_site PRIVATE serial)
target_link_libraries(ble_site PRIVATE log)
target_link_libraries(ble_site PRIVATE upStatus)
target_link_libraries(ble_site PRIVATE bleService)