add_executable(siteServeice_test service_provider_example.cpp)
target_link_libraries(siteServeice_test PRIVATE siteService)


add_executable(site_subcribe_test siteSubscribe.cpp)
target_link_libraries(site_subcribe_test PRIVATE siteService)

add_executable(site_publish_test sitePublish.cpp)
target_link_libraries(site_publish_test PRIVATE siteService)
